Tweak intents and handlers, use default intent processing

--- a/ansible_deployment/roles/rhasspy-server/files/sentences.ini
+++ b/ansible_deployment/roles/rhasspy-server/files/sentences.ini
@@ -3,13 +3,13 @@ where is the ($aircraft)
 what is the ($aircraft) location
 
 [GetStarepointLocation]
-where is the ($aircraft) (looking | staring | pointing)?
+where is the ($aircraft) (looking | staring | pointing)
 
 [FlyToWaypoint]
-fly to [point] ($mission)
+fly to waypoint ($point){point}
 
 [FlyMission]
-fly mission ($mission)
+fly mission ($mission){mission}
 
 [ReturnHome]
 return home
@@ -18,9 +18,9 @@ return home
 fly to me
 come here
 
-[StareAtPoint]
-look at ($point)
-stare at ($point)
+[StareAtWaypoint]
+look at waypoint ($point){point}
+stare at waypoint ($point){point}
 
 [StareAtMe]
 look at me
